--- a/Multivariate EDA Part 2.ipynb
+++ b/Multivariate EDA Part 2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "id": "f62ae2d9",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 9,
    "id": "0e6dcb2d",
    "metadata": {},
    "outputs": [],
@@ -94,22 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 10,
    "id": "d7582132",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Mobile': 23.332268382252913,\n",
+       "{'Miscellaneous Non-Industrial NEC': 8.087460216469426,\n",
        " 'Fuel Comb': 6.072665015723879,\n",
        " 'Commercial': 0.07913032883181789,\n",
        " 'Fires': 58.517143797936356,\n",
-       " 'Miscellaneous Non-Industrial NEC': 8.087460216469426,\n",
+       " 'Mobile': 23.332268382252913,\n",
        " 'Industrial Processes': 3.911332258785599}"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 11,
    "id": "578228eb",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 12,
    "id": "1ab003a0",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 13,
    "id": "a2b8a009",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 15,
    "id": "82eae340",
    "metadata": {},
    "outputs": [
@@ -315,23 +315,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-f353ed4cb86d4887b33ebc25cd60c301.vega-embed {\n",
+       "  #altair-viz-4f0e0baf32d14a27999e85f2868e190b.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-f353ed4cb86d4887b33ebc25cd60c301.vega-embed details,\n",
-       "  #altair-viz-f353ed4cb86d4887b33ebc25cd60c301.vega-embed details summary {\n",
+       "  #altair-viz-4f0e0baf32d14a27999e85f2868e190b.vega-embed details,\n",
+       "  #altair-viz-4f0e0baf32d14a27999e85f2868e190b.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-f353ed4cb86d4887b33ebc25cd60c301\"></div>\n",
+       "<div id=\"altair-viz-4f0e0baf32d14a27999e85f2868e190b\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-f353ed4cb86d4887b33ebc25cd60c301\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-f353ed4cb86d4887b33ebc25cd60c301\");\n",
+       "    if (outputDiv.id !== \"altair-viz-4f0e0baf32d14a27999e85f2868e190b\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-4f0e0baf32d14a27999e85f2868e190b\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -377,21 +377,21 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300, \"strokeWidth\": 0}, \"axis\": {\"labelFontSize\": 16}, \"title\": {\"fontSize\": 20}}, \"vconcat\": [{\"hconcat\": [{\"data\": {\"name\": \"data-5719eafd50ad2098cf423bdb73fae0f7\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-25, 25]}, \"title\": \"Metro Pop. 1MM+\", \"type\": \"quantitative\"}, \"y\": {\"axis\": {\"title\": \"Sectors\", \"titleFontSize\": 20}, \"field\": \"Sector\", \"sort\": [\"Commercial\", \"Industrial Processes\", \"Fuel Comb\", \"Fires\", \"Miscellaneous Non-Industrial NEC\", \"Mobile\"], \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}, {\"data\": {\"name\": \"data-7706b8392434c1ef3aaa04b76445a07d\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-25, 25]}, \"title\": \"Metro 1MM>Pop.>250k\", \"type\": \"quantitative\"}, \"y\": {\"axis\": null, \"field\": \"Sector\", \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}, {\"data\": {\"name\": \"data-dce2b92baec29fc65ae922b8bd9b5577\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-25, 25]}, \"title\": \"Metro 250k>Pop.>20k\", \"type\": \"quantitative\"}, \"y\": {\"axis\": null, \"field\": \"Sector\", \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}, {\"data\": {\"name\": \"data-25b578e6fc613bd266b7b751c71c9d99\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-25, 25]}, \"title\": \"Urban-Metro- 250k>Pop.>20k\", \"type\": \"quantitative\"}, \"y\": {\"axis\": null, \"field\": \"Sector\", \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}, {\"data\": {\"name\": \"data-555c06ed159df9172120c514cd44161a\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-25, 25]}, \"title\": \"Rural by Metro - Pop. <2.5k\", \"type\": \"quantitative\"}, \"y\": {\"axis\": null, \"field\": \"Sector\", \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}]}, {\"data\": {\"name\": \"empty\"}, \"mark\": {\"type\": \"text\"}, \"encoding\": {\"text\": {\"value\": \"\"}}, \"title\": {\"text\": [\"Deviation\"], \"anchor\": \"middle\", \"baseline\": \"bottom\", \"dx\": 308, \"fontSize\": 20, \"fontWeight\": \"bold\", \"orient\": \"bottom\"}}], \"title\": {\"text\": \"Sectoral Emissions by Urbanization Level\", \"dx\": 350}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.15.1.json\", \"datasets\": {\"data-5719eafd50ad2098cf423bdb73fae0f7\": [{\"Sector\": \"Mobile\", \"Value\": -22.91007433887159}, {\"Sector\": \"Fuel Comb\", \"Value\": -1.1461129924541318}, {\"Sector\": \"Commercial\", \"Value\": -0.09268259462640735}, {\"Sector\": \"Fires\", \"Value\": 20.68946880565261}, {\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": 4.13726542099614}, {\"Sector\": \"Industrial Processes\", \"Value\": -0.6778643006966361}], \"data-7706b8392434c1ef3aaa04b76445a07d\": [{\"Sector\": \"Mobile\", \"Value\": 5.379824325793468}, {\"Sector\": \"Fuel Comb\", \"Value\": 1.1326952550431306}, {\"Sector\": \"Commercial\", \"Value\": 0.036853280654658094}, {\"Sector\": \"Fires\", \"Value\": -12.633836673725412}, {\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": 4.372742497330883}, {\"Sector\": \"Industrial Processes\", \"Value\": 1.7117213149032504}], \"data-dce2b92baec29fc65ae922b8bd9b5577\": [{\"Sector\": \"Mobile\", \"Value\": 1.5179133967264171}, {\"Sector\": \"Fuel Comb\", \"Value\": -7.187947306845481}, {\"Sector\": \"Commercial\", \"Value\": 0.0353715066006202}, {\"Sector\": \"Fires\", \"Value\": 13.305560843482453}, {\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": -4.011324445186974}, {\"Sector\": \"Industrial Processes\", \"Value\": -3.6595739947770465}], \"data-25b578e6fc613bd266b7b751c71c9d99\": [{\"Sector\": \"Mobile\", \"Value\": 14.30407100366396}, {\"Sector\": \"Fuel Comb\", \"Value\": -0.11863674533440882}, {\"Sector\": \"Commercial\", \"Value\": 0.07041638850387406}, {\"Sector\": \"Fires\", \"Value\": -14.931234481074014}, {\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": 1.195949147820385}, {\"Sector\": \"Industrial Processes\", \"Value\": -0.5205653135797945}], \"data-555c06ed159df9172120c514cd44161a\": [{\"Sector\": \"Mobile\", \"Value\": 17.05391463402139}, {\"Sector\": \"Fuel Comb\", \"Value\": 5.4819419170506585}, {\"Sector\": \"Commercial\", \"Value\": 0.07573754107270872}, {\"Sector\": \"Fires\", \"Value\": -19.598038793708298}, {\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": -4.601469062924517}, {\"Sector\": \"Industrial Processes\", \"Value\": 1.5879137644880417}], \"empty\": [{}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 300, \"continuousHeight\": 300, \"strokeWidth\": 0}, \"axis\": {\"labelFontSize\": 16}, \"title\": {\"fontSize\": 20}}, \"vconcat\": [{\"hconcat\": [{\"data\": {\"name\": \"data-bbcbb957c8c3fe883291ee08777be361\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-50, 50]}, \"title\": \"Metro Pop. 1MM+\", \"type\": \"quantitative\"}, \"y\": {\"axis\": {\"title\": \"Sectors\", \"titleFontSize\": 20}, \"field\": \"Sector\", \"sort\": [\"Commercial\", \"Industrial Processes\", \"Fuel Comb\", \"Fires\", \"Miscellaneous Non-Industrial NEC\", \"Mobile\"], \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}, {\"data\": {\"name\": \"data-4fe41fe83baa3314831d6739df990fba\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-50, 50]}, \"title\": \"Metro 1MM>Pop.>250k\", \"type\": \"quantitative\"}, \"y\": {\"axis\": null, \"field\": \"Sector\", \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}, {\"data\": {\"name\": \"data-ee44c305aa2161930789c1e82912096d\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-50, 50]}, \"title\": \"Metro 250k>Pop.>20k\", \"type\": \"quantitative\"}, \"y\": {\"axis\": null, \"field\": \"Sector\", \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}, {\"data\": {\"name\": \"data-27c47b64c33506999187b7660da36f50\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-50, 50]}, \"title\": \"Urban-Metro- 250k>Pop.>20k\", \"type\": \"quantitative\"}, \"y\": {\"axis\": null, \"field\": \"Sector\", \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}, {\"data\": {\"name\": \"data-6548455ec6557d88f99cdadcea7de346\"}, \"mark\": {\"type\": \"bar\"}, \"encoding\": {\"color\": {\"condition\": {\"test\": \"(datum.Value > 0)\", \"value\": \"green\"}, \"value\": \"red\"}, \"x\": {\"field\": \"Value\", \"scale\": {\"domain\": [-50, 50]}, \"title\": \"Rural by Metro - Pop. <2.5k\", \"type\": \"quantitative\"}, \"y\": {\"axis\": null, \"field\": \"Sector\", \"type\": \"nominal\"}}, \"height\": 200, \"width\": 100}]}, {\"data\": {\"name\": \"empty\"}, \"mark\": {\"type\": \"text\"}, \"encoding\": {\"text\": {\"value\": \"\"}}, \"title\": {\"text\": [\"Deviation\"], \"anchor\": \"middle\", \"baseline\": \"bottom\", \"dx\": 308, \"fontSize\": 20, \"fontWeight\": \"bold\", \"orient\": \"bottom\"}}], \"title\": {\"text\": \"Sectoral Emissions by Urbanization Level\", \"dx\": 350}, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.15.1.json\", \"datasets\": {\"data-bbcbb957c8c3fe883291ee08777be361\": [{\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": 4.13726542099614}, {\"Sector\": \"Fuel Comb\", \"Value\": -1.1461129924541318}, {\"Sector\": \"Commercial\", \"Value\": -0.09268259462640735}, {\"Sector\": \"Fires\", \"Value\": 20.68946880565261}, {\"Sector\": \"Mobile\", \"Value\": -22.91007433887159}, {\"Sector\": \"Industrial Processes\", \"Value\": -0.6778643006966361}], \"data-4fe41fe83baa3314831d6739df990fba\": [{\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": 4.372742497330883}, {\"Sector\": \"Fuel Comb\", \"Value\": 1.1326952550431306}, {\"Sector\": \"Commercial\", \"Value\": 0.036853280654658094}, {\"Sector\": \"Fires\", \"Value\": 40.564699741476915}, {\"Sector\": \"Mobile\", \"Value\": -47.818712089408855}, {\"Sector\": \"Industrial Processes\", \"Value\": 1.7117213149032504}], \"data-ee44c305aa2161930789c1e82912096d\": [{\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": -4.011324445186974}, {\"Sector\": \"Fuel Comb\", \"Value\": -7.187947306845481}, {\"Sector\": \"Commercial\", \"Value\": 0.0353715066006202}, {\"Sector\": \"Fires\", \"Value\": 13.305560843482453}, {\"Sector\": \"Mobile\", \"Value\": 1.5179133967264171}, {\"Sector\": \"Industrial Processes\", \"Value\": -3.6595739947770465}], \"data-27c47b64c33506999187b7660da36f50\": [{\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": 1.195949147820385}, {\"Sector\": \"Fuel Comb\", \"Value\": -0.11863674533440882}, {\"Sector\": \"Commercial\", \"Value\": -8.949067049757135}, {\"Sector\": \"Fires\", \"Value\": -14.931234481074014}, {\"Sector\": \"Mobile\", \"Value\": 23.32355444192497}, {\"Sector\": \"Industrial Processes\", \"Value\": -0.5205653135797945}], \"data-6548455ec6557d88f99cdadcea7de346\": [{\"Sector\": \"Miscellaneous Non-Industrial NEC\", \"Value\": -4.601469062924517}, {\"Sector\": \"Fuel Comb\", \"Value\": 5.4819419170506585}, {\"Sector\": \"Commercial\", \"Value\": 0.07573754107270872}, {\"Sector\": \"Fires\", \"Value\": -19.598038793708298}, {\"Sector\": \"Mobile\", \"Value\": 17.05391463402139}, {\"Sector\": \"Industrial Processes\", \"Value\": 1.5879137644880417}], \"empty\": [{}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
        "alt.VConcatChart(...)"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Finally, let's go ahead and run this...\n",
-    "chart_list = sectoral_chart_build(nominal_drift_dict, 100, 200,metro_decorder, axis_scale=25 )    \n",
+    "chart_list = sectoral_chart_build(nominal_drift_dict, 100, 200,metro_decorder, axis_scale=50 )    \n",
     "concat_chart = (chart_list[0] | chart_list[1] | chart_list[2] | chart_list[3] | chart_list[-2])\n",
     "display_chart(concat_chart,\"Deviation\", \"Sectoral Emissions by Urbanization Level\",350)"
    ]
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a24b6f3",
+   "id": "4402fbc7",
    "metadata": {},
    "outputs": [],
    "source": []
