--- a/Univariate EDA.ipynb
+++ b/Univariate EDA.ipynb
@@ -5,7 +5,7 @@
    "id": "edc2ed05",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis\n",
+    "# Univariate Exploratory Data Analysis\n",
     "---\n",
     "## Purpose:\n",
     "In the last notebooks (Data_manipulation & Basic_data_structure) we established functions to enable us to drill down and characterize emissions at the county or state level, as well as by emission sector. <u>In this notebook, we will explore basic trends that we see in the initial datasets exclusively.</u> In the next notebook we will explore multivariate trends or correlations.   \n",
@@ -14,7 +14,7 @@
     "### Package Installation and Versioning Requirments:\n",
     "For questions regarding python version, package installations, and other functional requirements, see the *Read Me* file contained [here](link).\n",
     "\n",
-    "Now, let's begin our data cleaning"
+    "Now, let's begin."
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73df3087",
+   "id": "9bac2b77",
    "metadata": {},
    "source": [
     "### Univariate Analysis of Cleaned Datasets"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5b84e16",
+   "id": "d22f3276",
    "metadata": {},
    "source": [
     "#### Histograms"
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "b5987f4a",
+   "id": "2338675b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "9abd2847",
+   "id": "057e7261",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd195943",
+   "id": "6050adb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d2492d",
+   "id": "c7b3c277",
    "metadata": {},
    "source": [
     "### Preface for Multi-Variate Analysis \n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7934e05",
+   "id": "7ea20580",
    "metadata": {},
    "source": [
     "### End of Notebook\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86ef2e6e",
+   "id": "ca42e36b",
    "metadata": {},
    "outputs": [],
    "source": []
