--- a/01_Basic_data_structure_observations.ipynb
+++ b/01_Basic_data_structure_observations.ipynb
@@ -366,7 +366,7 @@
     "#checking the USDA data: \n",
     "print(check_nan(df_USDA))\n",
     "\n",
-    "#view sample -- starting with emission data\n",
+    "#view sample -- USDA unemployment and income data\n",
     "df_USDA.info()"
    ]
   },
